deployment-endpoints.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
   matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: cloud66/k8s_secure_endpoint_app
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
   matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: cloud66/k8s_secure_endpoint_app
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 4000
