init-containers.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: myapp-pod
#   labels:
#     app: myapp
# spec:
#   containers:
#   - name: myapp-container
#     image: busybox:1.28
#     command: ['sh', '-c', 'echo The app is running! && sleep 3600']
#   initContainers:
#   - name: init-myservice
#     image: busybox:1.28
#     command: ['sh', '-c', 'until nslookup myservice; do echo waiting for myservice; sleep 2; done;']

# apiVersion: v1
# kind: Pod
# metadata:
#   name: nginx
#   labels:
#     app: myapp
# spec:
#   containers:
#   - name: myapp-container
#     image: nginx
#     ports:
#       - containerPort: 80
#     volumeMounts:
#       - name: htmldir
#         mountPath: /usr/share/nginx/html 
#   initContainers:
#   - name: init-myservice
#     image: busybox:1.28
#     command:
#       - wget
#       - "-0"
#       - "/work-dir/index.html"
#       - http://kubernetes.io
#     volumeMounts:
#       - name: htmldir
#         mountPath: "/work-dir"
#   volumes:
#     - name: htmldir


apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      # directory location on host
      path: /opt/volumes/test
