redis-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redispod1
spec:
  containers:
  - image: redis
    name: redisdb
    ports:
    - containerPort: 6379
      protocol: TCP
    volumeMounts:
    - name: redis-data
      mountPath: /data
